--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
       <article class="resume" data-page="resume">
 
         <header>
-          <h2 class="h2 article-title">Resumo</h2>
+          <h2 class="h2 article-title">Resume</h2>
         </header>
 
         <section class="timeline">
@@ -540,20 +540,32 @@
               <ion-icon name="book-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Educação</h3>
+            <h3 class="h3">Education</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Colégio Smartbits</h4>
+              <h4 class="h4 timeline-item-title">Northampton University</h4>
 
-              <span>2020</span>
-              <span>13ª</span>
+              <span>June 2015</span>
 
               <p class="timeline-text">
-                Técnico Informático
+                BACHELOR OF ARTS IN BUSINESS
+              </p>
+
+            </li>
+			
+			
+			<li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Nova School of Business and Economics</h4>
+
+              <span>November 2019</span>
+
+              <p class="timeline-text">
+                POST GRADUATION IN MANAGEMENT
               </p>
 
             </li>
@@ -571,119 +583,93 @@
               <ion-icon name="briefcase-outline"></ion-icon>
             </div>
 
-            <h3 class="h3">Experiência</h3>
+            <h3 class="h3">Experience</h3>
           </div>
 
           <ol class="timeline-list">
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Hackathon (Inovação na governação local)</h4>
-              <span>Desenvolvedor Web</span>
-              <span>2021</span>
-
+              <h4 class="h4 timeline-item-title">Acelera Angola</h4>
+              <span>PROGRAM MANAGER AND STARTUP ANALYST</span>
+              <span>March 2022 - Present</span>
+			  
+			  </br>
               <p class="timeline-text">
-                Participei de um Hackathon cujo objetivo era
-                apresentar uma solução para melhorar,
-                dinamizar, e eliminar a burocracia nos serviços
-                do estado.
-              </p> <br>
-
-              <p class="timeline-text">
-                - Trabalhei com a equipa dos serviços de documentação, para aumentar a agilidade e mobilidade da governação local, automatizando processos e melhorar o tempo de resposta tendo feito um ChatBot usando JavaScript.
+                - Coordinate and manage resources to ensure the successful implementation of program activities
+              </p>
+			  <p class="timeline-text">
+                - Develop and manage program schedules to ensure successful completion of tasks and deliverables
+              </p>
+			  <p class="timeline-text">
+                - Establish and maintain effective relationships with stakeholders to ensure program objectives are meet
+              </p>
+			  <p class="timeline-text">
+                - I offer guidance and support to startups in areas such as strategy, business, and finance
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">NeedHere</h4>
-              <span>Desenvolvedor Web e Mobile</span>
+              <h4 class="h4 timeline-item-title">Bank Millennium Atlantico</h4>
+              <span>BUSINESS ANALYST</span>
+              <span>December 2018 - May 2022</span>
 
-              <span>2022</span>
-
+			  </br>
               <p class="timeline-text">
-                Trabalhei numa startup brasileira como desenvolvedor mobile no desenvolvimento de um aplicativo de mobilidade, como desenvolvedor web, trabalhei no front end, desenvolvendo a landing page do site, usando as tecnologias HTML, CSS, JavaScript e ReactJS. E como desenvolvedor mobile, trabalhei como front end na construção das telas e os seus componentes, usando a tecnologia React Native.
-              </p>
+                - Created data models to support the organization's analytics, reporting and dashboard, using Excel Pivot
+			  </p>
+			  <p class="timeline-text">
+                - Coordinated with project teams to develop testing plans and ensure accuracy of new technology
+			  </p>
+			  <p class="timeline-text">
+                - Analyzed data to identify trends, potential issues and opportunities for improvement
+			  </p>
+			  <p class="timeline-text">
+                - I have worked in the innovation department, where I was involved in researching and implementing new technologies
+			  </p>
+
 
             </li>
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Landing pages
-              </h4>
-
-              <span>2019 — Presente</span>
-
-              <p class="timeline-text">
-                Faço redesign de sites conhecidos e
-                tutoriais no You tube, aplicando
-                conceitos de Design Emocional e Design
-                Thinking.
-              </p>
-
-            </li>
 
           </ol>
         </section>
 
         <section class="skill">
 
-          <h3 class="h3 skills-title">Minhas Habilidades</h3>
+          <h3 class="h3 skills-title">Skills</h3>
 
           <ul class="skills-list content-card">
 
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">HTML</h5>              
+                <h5 class="h5">Python</h5>              
               </div>
             </li>
 
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">JavaScript</h5>
+                <h5 class="h5">R Programming</h5>
               </div>
             </li>
 
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">CSS</h5>
+                <h5 class="h5">Excel</h5>
               </div>
             </li>
 
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">ReatJs</h5>  
+                <h5 class="h5">Power B</h5>  
               </div>
             </li>
 
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">GIT</h5>
-              </div>
-            </li>
-
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">MySQL</h5>
-              </div>
-            </li>
-
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">NodeJs</h5>
-              </div>
-            </li>
-
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">PHP</h5>
-              </div>
-            </li>
-
-            <li class="skills-item">
-              <div class="title-wrapper">
-                <h5 class="h5">Photoshop</h5>
+                <h5 class="h5">SQL</h5>
               </div>
             </li>
           </ul>
@@ -703,7 +689,7 @@
       <article class="portfolio" data-page="projects">
 
         <header>
-          <h2 class="h2 article-title">Projetos</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
         <section class="projects">
@@ -711,23 +697,27 @@
           <ul class="filter-list">
 
             <li class="filter-item">
-              <button class="active" data-filter-btn>Todos</button>
+              <button class="active" data-filter-btn>All</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Sales</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Aplicativos</button>
+              <button data-filter-btn>HR</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Desenvolvimento web</button>
+              <button data-filter-btn>Marketing</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Design Grafico</button>
+              <button data-filter-btn>Finance</button>
+            </li>
+			
+			<li class="filter-item">
+              <button data-filter-btn>Others</button>
             </li>
 
           </ul>
@@ -1011,34 +1001,26 @@
       <article class="contact" data-page="contact">
 
         <header>
-          <h2 class="h2 article-title">Contato</h2>
+          <h2 class="h2 article-title">Contact</h2>
         </header>
-
-        <section class="mapbox" data-mapbox>
-          <figure>
-            <iframe
-              src="https://www.google.com/maps/d/u/0/embed?mid=1lEAFKWnV9iXI80mk4OyUOfLwWa4&msa=0&ie=UTF8&t=h&ll=-8.83833300000001%2C13.234444000000014&spn=0%2C0&output=embed&z=17"
-              width="400" height="300" loading="lazy"></iframe>
-          </figure>
-        </section>
 
         <section class="contact-form">
 
-          <h3 class="h3 form-title">Formulário de Contato</h3>
+          <h3 class="h3 form-title">Contact Form</h3>
 
           <form action="#" class="form" data-form>
 
             <div class="input-wrapper">
-              <input type="text" name="fullname" class="form-input" placeholder="Nome Completo" required data-form-input>
+              <input type="text" name="fullname" class="form-input" placeholder="Full Name" required data-form-input>
 
               <input type="email" name="email" class="form-input" placeholder="Email" required data-form-input>
             </div>
 
-            <textarea name="message" class="form-input" placeholder="Sua Mensagem" required data-form-input></textarea>
+            <textarea name="message" class="form-input" placeholder="Your message" required data-form-input></textarea>
 
             <button class="form-btn" type="submit" disabled data-form-btn>
               <ion-icon name="paper-plane"></ion-icon>
-              <span>Send Mensage</span>
+              <span>Send Message</span>
             </button>
 
           </form>
