--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" id="avatar" alt="Adilson Vieira" width="80">
+          <img src="./assets/images/33394106.jpg" id="avatar" alt="Adilson Vieira" width="80">
         </figure>
 
         <div class="info-content">
@@ -268,7 +268,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/icon-design.svg" alt="Web development icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -284,7 +284,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/icon-design.svg" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
