--- a/index.html
+++ b/index.html
@@ -738,23 +738,27 @@
             <ul class="select-list">
 
               <li class="select-item">
-                <button data-select-item>Todos</button>
+                <button data-select-item>All</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Sales</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Aplicativos</button>
+                <button data-select-item>HR</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Desenvolvimento web</button>
+                <button data-select-item>Marketing</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Design Grafico</button>
+                <button data-select-item>Finance</button>
+              </li>
+
+	      <li class="select-item">
+                <button data-select-item>Others</button>
               </li>
 
             </ul>
@@ -763,7 +767,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="desenvolvimento web">
+            <li class="project-item  active" data-filter-item data-category="Others">
               <a href="#">
 
                 <figure class="project-img">
