--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
 
                 <h3 class="project-title">Finance</h3>
 
-                <p class="project-category">Desenvolvimento web</p>
+                <p class="project-category">Others</p>
 
               </a>
             </li>
