--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="Others">
-              <a href="#">
+              <a href="https://github.com/adilsonhcvieira/Data_Analysis_Projects/tree/main/CO2%20EMISSION%20PRODUCTION%20BY%20REGION%201960-2011" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
