--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
                   <img src="./assets/images/proj1.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">CO2 EMISSION PRODUCTION BY REGION 1960-2011</h3>
 
                 <p class="project-category">Others</p>
 
