--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="contact-info">
               <p class="contact-title">Email</p>
 
-              <a href="mailto:adilosn.h.vieira@gmail.com" class="contact-link">adilson.h.vieira@gmail.com</a>
+              <a href="mailto:adilson.h.vieira@gmail.com" class="contact-link">adilson.h.vieira@gmail.com</a>
             </div>
 
           </li>
@@ -88,7 +88,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone 1</p>
 
-              <a href="tel:+244923236680" class="contact-link">+44 7478499007</a>
+              <a href="tel:+244 923236680" class="contact-link">+44 7478499007</a>
             </div>
 
           </li>
@@ -102,7 +102,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone 2</p>
 
-              <a href="tel:+447478499007" class="contact-link">+244 944206545</a>
+              <a href="tel:+44 7478499007" class="contact-link">+244 944206545</a>
             </div>
 
           </li>
@@ -545,19 +545,7 @@
 
           <ol class="timeline-list">
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Northampton University</h4>
-
-              <span>June 2015</span>
-
-              <p class="timeline-text">
-                BACHELOR OF ARTS IN BUSINESS
-              </p>
-
-            </li>
-			
-			
+           
 			<li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Nova School of Business and Economics</h4>
@@ -570,6 +558,18 @@
 
             </li>
 
+		  <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Northampton University</h4>
+
+              <span>June 2015</span>
+
+              <p class="timeline-text">
+                BACHELOR OF ARTS IN BUSINESS
+              </p>
+
+            </li>
+			
            
 
           </ol>
@@ -643,9 +643,20 @@
 
           <ul class="skills-list content-card">
 
-            <li class="skills-item">
+                       <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Python</h5>              
+                <h5 class="h5">Excel</h5>
+              </div>
+            </li>
+
+		    <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Google Sheet</h5>
+              </div>
+            </li>
+		  <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">SQL</h5>              
               </div>
             </li>
 
@@ -657,19 +668,38 @@
 
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Excel</h5>
+                <h5 class="h5">Power BI</h5>  
+              </div>
+            </li>
+		    <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Python</h5>
+              </div>
+            </li>
+		    <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Tableau</h5>
               </div>
             </li>
 
-            <li class="skills-item">
+		    <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">Power B</h5>  
+                <h5 class="h5">Raw Graphs</h5>
               </div>
             </li>
-
+  <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Data Wrapper</h5>
+              </div>
+            </li>
+		    <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Grafana</h5>
+              </div>
+            </li>
             <li class="skills-item">
               <div class="title-wrapper">
-                <h5 class="h5">SQL</h5>
+                <h5 class="h5">GitHub</h5>
               </div>
             </li>
           </ul>
