--- a/index.html
+++ b/index.html
@@ -633,6 +633,32 @@
 
             </li>
 
+		   <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Simões Pereira</h4>
+              <span>Simões Pereira Consulting</span>
+              <span>Setember 2016 - September 2018</span>
+
+			  </br>
+              <p class="timeline-text">
+                - Utilized knowledge of tax regulations to inform clients on the best strategies for tax optimization
+		      
+			  </p>
+			  <p class="timeline-text">
+                - Developed financial models to analyze profitability and financial projections for organizations
+			  </p>
+			  <p class="timeline-text">
+                - Analyzed financial data to identify trends and forecast future performance
+			  </p>
+			  <p class="timeline-text">
+                - Proven record of e effectively managing  financial accounts and ensuring accuracy of  financial records
+			  </p>
+		  <p class="timeline-text">
+                - Help clients maintaining accurate  financial records and reported  financial performance to management on a regular basis
+			  </p>
+
+            </li>
+
 
           </ol>
         </section>
@@ -798,7 +824,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="Others">
-              <a href="https://github.com/adilsonhcvieira/Data_Analysis_Projects/tree/main/CO2%20EMISSION%20PRODUCTION%20BY%20REGION%201960-2011" target="_blank">
+              <a href="https://public.tableau.com/views/CO2Emission_16870912285840/Dashboard?:language=en-GB&:display_count=n&:origin=viz_share_link" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -1009,7 +1035,7 @@
 
                 <h3 class="project-title">Logotipo</h3>
 
-                <p class="project-category">Design grafico</p>
+                <p class="project-category">Data Analytics</p>
 
               </a>
             </li>
