--- a/index.html
+++ b/index.html
@@ -827,20 +827,20 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="desenvolvimento web">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="Others">
+              <a href="https://github.com/adilsonhcvieira/Data_Analysis_Projects/tree/b8048b595cff327deb3433afc0b94680dd7922b1/HR%20Analytics%20Dashboard%20-%20Project%201 ">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/proj2.jpg" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Dashboard</h3>
+                <h3 class="project-title">HR Analytics Dashboard - Project 1</h3>
 
-                <p class="project-category">Desenvolvimento web</p>
+                <p class="project-category">Others</p>
 
               </a>
             </li>
