--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="Others">
-              <a href="https://github.com/adilsonhcvieira/Data_Analysis_Projects/tree/b8048b595cff327deb3433afc0b94680dd7922b1/HR%20Analytics%20Dashboard%20-%20Project%201 ">
+              <a href="https://github.com/adilsonhcvieira/Data_Analysis_Projects/tree/b8048b595cff327deb3433afc0b94680dd7922b1/HR%20Analytics%20Dashboard%20-%20Project%201 " target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
