--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/proj2.jpg" alt="orizon" loading="lazy">
+                  <img src="./assets/images/Different numeric varients.png" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">EDA analysis using Python</h3>
