--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="Others">
+            <li class="project-item  active" data-filter-item data-category="others">
               <a href="https://public.tableau.com/views/CO2Emission_16870912285840/Dashboard?:language=en-GB&:display_count=n&:origin=viz_share_link" target="_blank">
 
                 <figure class="project-img">
