--- a/index.html
+++ b/index.html
@@ -809,7 +809,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="others">
+            <li class="project-item  active" data-filter-item data-category="others all">
               <a href="https://public.tableau.com/views/CO2Emission_16870912285840/Dashboard?:language=en-GB&:display_count=n&:origin=viz_share_link" target="_blank">
 
                 <figure class="project-img">
@@ -827,7 +827,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Others">
+            <li class="project-item  active" data-filter-item data-category="others">
               <a href="https://github.com/adilsonhcvieira/Data_Analysis_Projects/tree/b8048b595cff327deb3433afc0b94680dd7922b1/HR%20Analytics%20Dashboard%20-%20Project%201" target="_blank">
 
                 <figure class="project-img">
@@ -845,7 +845,7 @@
               </a>
             </li>
 
-	    <li class="project-item  active" data-filter-item data-category="Others">
+	    <li class="project-item  active" data-filter-item data-category="others">
               <a href="https://github.com/adilsonhcvieira/Data_Analysis_Projects/tree/main/EDA%20analysis%20using%20Python" target="_blank">
 
                 <figure class="project-img">
