--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Adilson Vieira">Adilson Vieira</h1>
 
-          <p class="title">Data Analyst / Business Analyst</p>
+          <p class="title">Business & Data Analyst / Project Manager (Freelancer)</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
