--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Adilson Vieira">Adilson Vieira</h1>
 
-          <p class="title">Business & Data Analyst / Project Manager</p>
+          <p class="title">Data Science/ Analyst </p>
 		<p (Freelancer)</p>
         </div>
 
